Update 'import-tests-go-zrgqclgr-workflow' component image to: quay.io/rhtap_qe/import-tests-go-zrgqclgr-workflow:c0e96c734fb530ccf7b47cceea8bc0e05ae82997@sha256:ce9b110d4060b5c2a164c74a69e1d5596cf2ef7b528764ae7a3351aef9824468

--- a/components/import-tests-go-zrgqclgr-workflow/overlays/development/deployment-patch.yaml
+++ b/components/import-tests-go-zrgqclgr-workflow/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: import-tests-go-zrgqclgr-workflow
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-tssc/task-runner:1.7
-        name: container-image  
+        - image: quay.io/rhtap_qe/import-tests-go-zrgqclgr-workflow:c0e96c734fb530ccf7b47cceea8bc0e05ae82997@sha256:ce9b110d4060b5c2a164c74a69e1d5596cf2ef7b528764ae7a3351aef9824468
+          name: container-image
